# Protein-Practicality

./: README.md  main.py  pyproject.toml
data/: food_protein_calorie_category.csv
notebooks/: data_viz.ipynb
