[project]
name = "protein-practicality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "drawarrow>=0.1.0",
    "highlight-text>=0.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pyfonts>=1.2.0",
    "pypalettes>=0.2.1",
]
